# auto

./: .gitignore  CLAUDE.md  CODEBASE_KNOWLEDGE.md  CODEBASE_KNOWLEDGE_UPDATE.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE4_5_SUMMARY.md  PHASE5_GITHUB_ISSUES.md  PHASE5_IMPLEMENTATION_PLAN.md  README.md  TODOS.md  merge_fixed.py  pyproject.toml  test_basic.py  validate_merge_conflicts.py
.auto/: config.yaml
.auto/state/: #123.yaml  ENG-123.yaml
.claude/: claude.json
.claude/agents/: codebase-explorer.md  feature-architect.md  implementation-engineer.md
.claude/hooks/: post-tool.sh
.github/workflows/: test.yml
auto/: __init__.py  __main__.py  cli.py  config.py  core.py  models.py
auto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
auto/integrations/: ai.py  git.py  github.py  prompts.py  review.py
auto/templates/prompts/: implementation.yaml  performance.yaml  review-update.yaml  review.yaml  security-focused.yaml
auto/utils/: __init__.py  logger.py  shell.py
auto/workflows/: __init__.py  fetch.py  implement.py  merge.py  merge_cleanup.py  merge_conflicts.py  merge_execution.py  merge_validation.py  pr_create.py  process.py  review.py  review_comment.py  review_update.py
scripts/: install.sh
tests/: __init__.py  conftest.py  test_ai.py  test_cli.py  test_cli_cleanup.py  test_cli_fetch.py  test_cli_implement.py  test_cli_integration.py  test_cli_phase3.py  test_cli_process.py  test_cli_review_commands.py  test_cli_status.py  test_comment_prioritization.py  test_comment_processing.py  test_config.py  test_git.py  test_github.py  test_implement.py  test_integration_workflows.py  test_merge_automation.py  test_merge_conflict_handling.py  test_merge_execution.py  test_merge_integration.py  test_merge_protection_validation.py  test_merge_status_validation.py  test_merge_validation.py  test_models.py  test_performance_benchmarks.py  test_pr_create.py  test_prompts.py  test_review_configuration.py  test_review_cycle_completion.py  test_review_error_handling.py  test_review_integration.py  test_review_models.py  test_review_state_management.py  test_review_update_workflow.py  test_review_workflow.py  test_update_validation.py  test_workflows.py
